tests/errors/test_78.x
// No such libc variable

import std;

fn main() -> void {

	std::print(@what);

}
